y.output
Terminals unused in grammar

   BOOLEAN


Rules useless in parser due to conflicts

   78 $@21: %empty


State 51 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 $@2: %empty

    3 program: $@1 decl_list funct_def $@2 decl_and_def_list

    4 decl_list: decl_list var_decl
    5          | decl_list const_decl
    6          | decl_list funct_decl
    7          | %empty

    8 decl_and_def_list: decl_and_def_list var_decl
    9                  | decl_and_def_list const_decl
   10                  | decl_and_def_list funct_decl
   11                  | decl_and_def_list funct_def
   12                  | %empty

   13 $@3: %empty

   14 funct_def: scalar_type ID L_PAREN R_PAREN compound_statement $@3

   15 $@4: %empty

   16 funct_def: scalar_type ID L_PAREN parameter_list R_PAREN compound_statement $@4

   17 $@5: %empty

   18 $@6: %empty

   19 $@7: %empty

   20 funct_def: VOID ID L_PAREN R_PAREN $@5 compound_statement $@6 $@7

   21 $@8: %empty

   22 $@9: %empty

   23 $@10: %empty

   24 funct_def: VOID ID L_PAREN parameter_list R_PAREN $@8 compound_statement $@9 $@10

   25 funct_decl: scalar_type ID L_PAREN R_PAREN SEMICOLON
   26           | scalar_type ID L_PAREN parameter_list R_PAREN SEMICOLON
   27           | VOID ID L_PAREN R_PAREN SEMICOLON
   28           | VOID ID L_PAREN parameter_list R_PAREN SEMICOLON

   29 parameter_list: parameter_list COMMA scalar_type ID
   30               | parameter_list COMMA scalar_type array_decl
   31               | scalar_type array_decl
   32               | scalar_type ID

   33 var_decl: scalar_type identifier_list SEMICOLON

   34 identifier_list: identifier_list COMMA ID
   35                | identifier_list COMMA ID ASSIGN_OP Logical_expression
   36                | identifier_list COMMA array_decl ASSIGN_OP initial_array
   37                | identifier_list COMMA array_decl
   38                | array_decl ASSIGN_OP initial_array
   39                | array_decl
   40                | ID ASSIGN_OP Logical_expression
   41                | ID

   42 $@11: %empty

   43 initial_array: $@11 L_BRACE literal_list R_BRACE

   44 literal_list: literal_list COMMA Logical_expression
   45             | Logical_expression
   46             | %empty

   47 $@12: %empty

   48 const_decl: CONST $@12 scalar_type const_list SEMICOLON

   49 const_list: const_list COMMA ID ASSIGN_OP sign_literal_const
   50           | ID ASSIGN_OP sign_literal_const

   51 $@13: %empty

   52 array_decl: ID $@13 dim

   53 dim: dim ML_BRACE INT_CONST MR_BRACE
   54    | ML_BRACE INT_CONST MR_BRACE

   55 $@14: %empty

   56 compound_statement: L_BRACE $@14 var_const_stmt_list R_BRACE

   57 var_const_stmt_list: var_const_stmt_list statement
   58                    | var_const_stmt_list var_decl
   59                    | var_const_stmt_list const_decl
   60                    | %empty

   61 statement: compound_statement
   62          | simple_statement
   63          | conditional_statement
   64          | while_statement
   65          | for_statement
   66          | function_invoke_statement
   67          | jump_statement

   68 $@15: %empty

   69 $@16: %empty

   70 simple_statement: variable_reference $@15 ASSIGN_OP $@16 Logical_expression SEMICOLON

   71 $@17: %empty

   72 simple_statement: PRINT Logical_expression SEMICOLON $@17

   73 $@18: %empty

   74 $@19: %empty

   75 simple_statement: READ variable_reference $@18 SEMICOLON $@19

   76 $@20: %empty

   77 conditional_statement: IF L_PAREN Logical_expression R_PAREN $@20 L_BRACE var_const_stmt_list R_BRACE

   78 $@21: %empty

   79 conditional_statement: IF L_PAREN Logical_expression $@21 R_PAREN L_BRACE var_const_stmt_list R_BRACE ELSE L_BRACE var_const_stmt_list R_BRACE

   80 $@22: %empty

   81 $@23: %empty

   82 $@24: %empty

   83 $@25: %empty

   84 while_statement: WHILE L_PAREN Logical_expression $@22 R_PAREN L_BRACE $@23 var_const_stmt_list $@24 R_BRACE $@25

   85 $@26: %empty

   86 $@27: %empty

   87 $@28: %empty

   88 $@29: %empty

   89 $@30: %empty

   90 while_statement: DO L_BRACE $@26 $@27 var_const_stmt_list $@28 R_BRACE WHILE L_PAREN Logical_expression $@29 R_PAREN SEMICOLON $@30

   91 $@31: %empty

   92 for_statement: FOR L_PAREN initial_expression_list SEMICOLON control_expression_list SEMICOLON increment_expression_list R_PAREN $@31 L_BRACE var_const_stmt_list R_BRACE

   93 initial_expression_list: initial_expression
   94                        | %empty

   95 $@32: %empty

   96 $@33: %empty

   97 initial_expression: initial_expression COMMA variable_reference $@32 ASSIGN_OP $@33 Logical_expression
   98                   | initial_expression COMMA Logical_expression
   99                   | Logical_expression

  100 $@34: %empty

  101 $@35: %empty

  102 initial_expression: variable_reference $@34 ASSIGN_OP $@35 Logical_expression

  103 control_expression_list: control_expression
  104                        | %empty

  105 $@36: %empty

  106 $@37: %empty

  107 control_expression: control_expression COMMA variable_reference $@36 ASSIGN_OP $@37 Logical_expression
  108                   | control_expression COMMA Logical_expression
  109                   | Logical_expression

  110 $@38: %empty

  111 $@39: %empty

  112 control_expression: variable_reference $@38 ASSIGN_OP $@39 Logical_expression

  113 increment_expression_list: increment_expression
  114                          | %empty

  115 $@40: %empty

  116 $@41: %empty

  117 increment_expression: increment_expression COMMA variable_reference $@40 ASSIGN_OP $@41 Logical_expression
  118                     | increment_expression COMMA Logical_expression
  119                     | Logical_expression

  120 $@42: %empty

  121 $@43: %empty

  122 increment_expression: variable_reference $@42 ASSIGN_OP $@43 Logical_expression

  123 $@44: %empty

  124 $@45: %empty

  125 function_invoke_statement: ID L_PAREN $@44 logical_expression_list R_PAREN SEMICOLON $@45

  126 $@46: %empty

  127 function_invoke_statement: ID L_PAREN R_PAREN SEMICOLON $@46

  128 jump_statement: RETURN Logical_expression SEMICOLON
  129               | jump_loop_statement

  130 jump_loop_statement: CONTINUE SEMICOLON
  131                    | BREAK SEMICOLON

  132 variable_reference: array_list
  133                   | ID

  134 Logical_expression: logical_expression

  135 $@47: %empty

  136 logical_expression: logical_expression OR_OP $@47 logical_term
  137                   | logical_term

  138 $@48: %empty

  139 logical_term: logical_term AND_OP $@48 logical_factor
  140             | logical_factor

  141 $@49: %empty

  142 logical_factor: NOT_OP $@49 logical_factor
  143               | relation_expression

  144 relation_expression: relation_expression relation_operator arithmetic_expression
  145                    | arithmetic_expression

  146 relation_operator: LT_OP
  147                  | LE_OP
  148                  | EQ_OP
  149                  | GE_OP
  150                  | GT_OP
  151                  | NE_OP

  152 $@50: %empty

  153 arithmetic_expression: arithmetic_expression ADD_OP $@50 term

  154 $@51: %empty

  155 arithmetic_expression: arithmetic_expression SUB_OP $@51 term
  156                      | term

  157 $@52: %empty

  158 term: term MUL_OP $@52 factor

  159 $@53: %empty

  160 term: term DIV_OP $@53 factor

  161 $@54: %empty

  162 term: term MOD_OP $@54 factor
  163     | factor

  164 factor: sign_literal_const
  165       | element

  166 $@55: %empty

  167 element: SUB_OP $@55 element
  168        | variable_reference

  169 $@56: %empty

  170 element: L_PAREN $@56 logical_expression R_PAREN
  171        | ID L_PAREN logical_expression_list R_PAREN
  172        | ID L_PAREN R_PAREN

  173 logical_expression_list: logical_expression_list COMMA logical_expression
  174                        | logical_expression

  175 $@57: %empty

  176 array_list: ID $@57 dimension

  177 dimension: dimension ML_BRACE Logical_expression MR_BRACE
  178          | ML_BRACE Logical_expression MR_BRACE

  179 scalar_type: INT
  180            | DOUBLE
  181            | STRING
  182            | BOOL
  183            | FLOAT

  184 sign_literal_const: SUB_OP sign_literal_const
  185                   | literal_const

  186 literal_const: INT_CONST
  187              | FLOAT_CONST
  188              | SCIENTIFIC
  189              | STR_CONST
  190              | TRUE
  191              | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 14 16 20 24 25 26 27 28 29 32 34 35 40 41 49 50 52 125 127
    133 171 172 176
INT_CONST (259) 53 54 186
FLOAT_CONST (260) 187
SCIENTIFIC (261) 188
STR_CONST (262) 189
LE_OP (263) 147
NE_OP (264) 151
GE_OP (265) 149
EQ_OP (266) 148
AND_OP (267) 139
OR_OP (268) 136
READ (269) 75
BOOLEAN (270)
WHILE (271) 84 90
DO (272) 90
IF (273) 77 79
ELSE (274) 79
TRUE (275) 190
FALSE (276) 191
FOR (277) 92
INT (278) 179
PRINT (279) 72
BOOL (280) 182
VOID (281) 20 24 27 28
FLOAT (282) 183
DOUBLE (283) 180
STRING (284) 181
CONTINUE (285) 130
BREAK (286) 131
RETURN (287) 128
CONST (288) 48
L_PAREN (289) 14 16 20 24 25 26 27 28 77 79 84 90 92 125 127 170 171
    172
R_PAREN (290) 14 16 20 24 25 26 27 28 77 79 84 90 92 125 127 170 171
    172
COMMA (291) 29 30 34 35 36 37 44 49 97 98 107 108 117 118 173
SEMICOLON (292) 25 26 27 28 33 48 70 72 75 90 92 125 127 128 130 131
ML_BRACE (293) 53 54 177 178
MR_BRACE (294) 53 54 177 178
L_BRACE (295) 43 56 77 79 84 90 92
R_BRACE (296) 43 56 77 79 84 90 92
ADD_OP (297) 153
SUB_OP (298) 155 167 184
MUL_OP (299) 158
DIV_OP (300) 160
MOD_OP (301) 162
ASSIGN_OP (302) 35 36 38 40 49 50 70 97 102 107 112 117 122
LT_OP (303) 146
GT_OP (304) 150
NOT_OP (305) 142


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 3, on right: 0
$@1 (53)
    on left: 1, on right: 3
$@2 (54)
    on left: 2, on right: 3
decl_list (55)
    on left: 4 5 6 7, on right: 3 4 5 6
decl_and_def_list (56)
    on left: 8 9 10 11 12, on right: 3 8 9 10 11
funct_def (57)
    on left: 14 16 20 24, on right: 3 11
$@3 (58)
    on left: 13, on right: 14
$@4 (59)
    on left: 15, on right: 16
$@5 (60)
    on left: 17, on right: 20
$@6 (61)
    on left: 18, on right: 20
$@7 (62)
    on left: 19, on right: 20
$@8 (63)
    on left: 21, on right: 24
$@9 (64)
    on left: 22, on right: 24
$@10 (65)
    on left: 23, on right: 24
funct_decl (66)
    on left: 25 26 27 28, on right: 6 10
parameter_list (67)
    on left: 29 30 31 32, on right: 16 24 26 28 29 30
var_decl (68)
    on left: 33, on right: 4 8 58
identifier_list (69)
    on left: 34 35 36 37 38 39 40 41, on right: 33 34 35 36 37
initial_array (70)
    on left: 43, on right: 36 38
$@11 (71)
    on left: 42, on right: 43
literal_list (72)
    on left: 44 45 46, on right: 43 44
const_decl (73)
    on left: 48, on right: 5 9 59
$@12 (74)
    on left: 47, on right: 48
const_list (75)
    on left: 49 50, on right: 48 49
array_decl (76)
    on left: 52, on right: 30 31 36 37 38 39
$@13 (77)
    on left: 51, on right: 52
dim (78)
    on left: 53 54, on right: 52 53
compound_statement (79)
    on left: 56, on right: 14 16 20 24 61
$@14 (80)
    on left: 55, on right: 56
var_const_stmt_list (81)
    on left: 57 58 59 60, on right: 56 57 58 59 77 79 84 90 92
statement (82)
    on left: 61 62 63 64 65 66 67, on right: 57
simple_statement (83)
    on left: 70 72 75, on right: 62
$@15 (84)
    on left: 68, on right: 70
$@16 (85)
    on left: 69, on right: 70
$@17 (86)
    on left: 71, on right: 72
$@18 (87)
    on left: 73, on right: 75
$@19 (88)
    on left: 74, on right: 75
conditional_statement (89)
    on left: 77 79, on right: 63
$@20 (90)
    on left: 76, on right: 77
$@21 (91)
    on left: 78, on right: 79
while_statement (92)
    on left: 84 90, on right: 64
$@22 (93)
    on left: 80, on right: 84
$@23 (94)
    on left: 81, on right: 84
$@24 (95)
    on left: 82, on right: 84
$@25 (96)
    on left: 83, on right: 84
$@26 (97)
    on left: 85, on right: 90
$@27 (98)
    on left: 86, on right: 90
$@28 (99)
    on left: 87, on right: 90
$@29 (100)
    on left: 88, on right: 90
$@30 (101)
    on left: 89, on right: 90
for_statement (102)
    on left: 92, on right: 65
$@31 (103)
    on left: 91, on right: 92
initial_expression_list (104)
    on left: 93 94, on right: 92
initial_expression (105)
    on left: 97 98 99 102, on right: 93 97 98
$@32 (106)
    on left: 95, on right: 97
$@33 (107)
    on left: 96, on right: 97
$@34 (108)
    on left: 100, on right: 102
$@35 (109)
    on left: 101, on right: 102
control_expression_list (110)
    on left: 103 104, on right: 92
control_expression (111)
    on left: 107 108 109 112, on right: 103 107 108
$@36 (112)
    on left: 105, on right: 107
$@37 (113)
    on left: 106, on right: 107
$@38 (114)
    on left: 110, on right: 112
$@39 (115)
    on left: 111, on right: 112
increment_expression_list (116)
    on left: 113 114, on right: 92
increment_expression (117)
    on left: 117 118 119 122, on right: 113 117 118
$@40 (118)
    on left: 115, on right: 117
$@41 (119)
    on left: 116, on right: 117
$@42 (120)
    on left: 120, on right: 122
$@43 (121)
    on left: 121, on right: 122
function_invoke_statement (122)
    on left: 125 127, on right: 66
$@44 (123)
    on left: 123, on right: 125
$@45 (124)
    on left: 124, on right: 125
$@46 (125)
    on left: 126, on right: 127
jump_statement (126)
    on left: 128 129, on right: 67
jump_loop_statement (127)
    on left: 130 131, on right: 129
variable_reference (128)
    on left: 132 133, on right: 70 75 97 102 107 112 117 122 168
Logical_expression (129)
    on left: 134, on right: 35 40 44 45 70 72 77 79 84 90 97 98 99
    102 107 108 109 112 117 118 119 122 128 177 178
logical_expression (130)
    on left: 136 137, on right: 134 136 170 173 174
$@47 (131)
    on left: 135, on right: 136
logical_term (132)
    on left: 139 140, on right: 136 137 139
$@48 (133)
    on left: 138, on right: 139
logical_factor (134)
    on left: 142 143, on right: 139 140 142
$@49 (135)
    on left: 141, on right: 142
relation_expression (136)
    on left: 144 145, on right: 143 144
relation_operator (137)
    on left: 146 147 148 149 150 151, on right: 144
arithmetic_expression (138)
    on left: 153 155 156, on right: 144 145 153 155
$@50 (139)
    on left: 152, on right: 153
$@51 (140)
    on left: 154, on right: 155
term (141)
    on left: 158 160 162 163, on right: 153 155 156 158 160 162
$@52 (142)
    on left: 157, on right: 158
$@53 (143)
    on left: 159, on right: 160
$@54 (144)
    on left: 161, on right: 162
factor (145)
    on left: 164 165, on right: 158 160 162 163
element (146)
    on left: 167 168 170 171 172, on right: 165 167
$@55 (147)
    on left: 166, on right: 167
$@56 (148)
    on left: 169, on right: 170
logical_expression_list (149)
    on left: 173 174, on right: 125 171 173
array_list (150)
    on left: 176, on right: 132
$@57 (151)
    on left: 175, on right: 176
dimension (152)
    on left: 177 178, on right: 176 177
scalar_type (153)
    on left: 179 180 181 182 183, on right: 14 16 25 26 29 30 31 32
    33 48
sign_literal_const (154)
    on left: 184 185, on right: 49 50 164 184
literal_const (155)
    on left: 186 187 188 189 190 191, on right: 185


State 0

    0 $accept: . program $end

    $default  reduce using rule 1 ($@1)

    program  go to state 1
    $@1      go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    3 program: $@1 . decl_list funct_def $@2 decl_and_def_list

    $default  reduce using rule 7 (decl_list)

    decl_list  go to state 4


State 3

    0 $accept: program $end .

    $default  accept


State 4

    3 program: $@1 decl_list . funct_def $@2 decl_and_def_list
    4 decl_list: decl_list . var_decl
    5          | decl_list . const_decl
    6          | decl_list . funct_decl

    INT     shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7
    FLOAT   shift, and go to state 8
    DOUBLE  shift, and go to state 9
    STRING  shift, and go to state 10
    CONST   shift, and go to state 11

    funct_def    go to state 12
    funct_decl   go to state 13
    var_decl     go to state 14
    const_decl   go to state 15
    scalar_type  go to state 16


State 5

  179 scalar_type: INT .

    $default  reduce using rule 179 (scalar_type)


State 6

  182 scalar_type: BOOL .

    $default  reduce using rule 182 (scalar_type)


State 7

   20 funct_def: VOID . ID L_PAREN R_PAREN $@5 compound_statement $@6 $@7
   24          | VOID . ID L_PAREN parameter_list R_PAREN $@8 compound_statement $@9 $@10
   27 funct_decl: VOID . ID L_PAREN R_PAREN SEMICOLON
   28           | VOID . ID L_PAREN parameter_list R_PAREN SEMICOLON

    ID  shift, and go to state 17


State 8

  183 scalar_type: FLOAT .

    $default  reduce using rule 183 (scalar_type)


State 9

  180 scalar_type: DOUBLE .

    $default  reduce using rule 180 (scalar_type)


State 10

  181 scalar_type: STRING .

    $default  reduce using rule 181 (scalar_type)


State 11

   48 const_decl: CONST . $@12 scalar_type const_list SEMICOLON

    $default  reduce using rule 47 ($@12)

    $@12  go to state 18


State 12

    3 program: $@1 decl_list funct_def . $@2 decl_and_def_list

    $default  reduce using rule 2 ($@2)

    $@2  go to state 19


State 13

    6 decl_list: decl_list funct_decl .

    $default  reduce using rule 6 (decl_list)


State 14

    4 decl_list: decl_list var_decl .

    $default  reduce using rule 4 (decl_list)


State 15

    5 decl_list: decl_list const_decl .

    $default  reduce using rule 5 (decl_list)


State 16

   14 funct_def: scalar_type . ID L_PAREN R_PAREN compound_statement $@3
   16          | scalar_type . ID L_PAREN parameter_list R_PAREN compound_statement $@4
   25 funct_decl: scalar_type . ID L_PAREN R_PAREN SEMICOLON
   26           | scalar_type . ID L_PAREN parameter_list R_PAREN SEMICOLON
   33 var_decl: scalar_type . identifier_list SEMICOLON

    ID  shift, and go to state 20

    identifier_list  go to state 21
    array_decl       go to state 22


State 17

   20 funct_def: VOID ID . L_PAREN R_PAREN $@5 compound_statement $@6 $@7
   24          | VOID ID . L_PAREN parameter_list R_PAREN $@8 compound_statement $@9 $@10
   27 funct_decl: VOID ID . L_PAREN R_PAREN SEMICOLON
   28           | VOID ID . L_PAREN parameter_list R_PAREN SEMICOLON

    L_PAREN  shift, and go to state 23


State 18

   48 const_decl: CONST $@12 . scalar_type const_list SEMICOLON

    INT     shift, and go to state 5
    BOOL    shift, and go to state 6
    FLOAT   shift, and go to state 8
    DOUBLE  shift, and go to state 9
    STRING  shift, and go to state 10

    scalar_type  go to state 24


State 19

    3 program: $@1 decl_list funct_def $@2 . decl_and_def_list

    $default  reduce using rule 12 (decl_and_def_list)

    decl_and_def_list  go to state 25


State 20

   14 funct_def: scalar_type ID . L_PAREN R_PAREN compound_statement $@3
   16          | scalar_type ID . L_PAREN parameter_list R_PAREN compound_statement $@4
   25 funct_decl: scalar_type ID . L_PAREN R_PAREN SEMICOLON
   26           | scalar_type ID . L_PAREN parameter_list R_PAREN SEMICOLON
   40 identifier_list: ID . ASSIGN_OP Logical_expression
   41                | ID .
   52 array_decl: ID . $@13 dim

    L_PAREN    shift, and go to state 26
    ASSIGN_OP  shift, and go to state 27

    ML_BRACE  reduce using rule 51 ($@13)
    $default  reduce using rule 41 (identifier_list)

    $@13  go to state 28


State 21

   33 var_decl: scalar_type identifier_list . SEMICOLON
   34 identifier_list: identifier_list . COMMA ID
   35                | identifier_list . COMMA ID ASSIGN_OP Logical_expression
   36                | identifier_list . COMMA array_decl ASSIGN_OP initial_array
   37                | identifier_list . COMMA array_decl

    COMMA      shift, and go to state 29
    SEMICOLON  shift, and go to state 30


State 22

   38 identifier_list: array_decl . ASSIGN_OP initial_array
   39                | array_decl .

    ASSIGN_OP  shift, and go to state 31

    $default  reduce using rule 39 (identifier_list)


State 23

   20 funct_def: VOID ID L_PAREN . R_PAREN $@5 compound_statement $@6 $@7
   24          | VOID ID L_PAREN . parameter_list R_PAREN $@8 compound_statement $@9 $@10
   27 funct_decl: VOID ID L_PAREN . R_PAREN SEMICOLON
   28           | VOID ID L_PAREN . parameter_list R_PAREN SEMICOLON

    INT      shift, and go to state 5
    BOOL     shift, and go to state 6
    FLOAT    shift, and go to state 8
    DOUBLE   shift, and go to state 9
    STRING   shift, and go to state 10
    R_PAREN  shift, and go to state 32

    parameter_list  go to state 33
    scalar_type     go to state 34


State 24

   48 const_decl: CONST $@12 scalar_type . const_list SEMICOLON

    ID  shift, and go to state 35

    const_list  go to state 36


State 25

    3 program: $@1 decl_list funct_def $@2 decl_and_def_list .
    8 decl_and_def_list: decl_and_def_list . var_decl
    9                  | decl_and_def_list . const_decl
   10                  | decl_and_def_list . funct_decl
   11                  | decl_and_def_list . funct_def

    INT     shift, and go to state 5
    BOOL    shift, and go to state 6
    VOID    shift, and go to state 7
    FLOAT   shift, and go to state 8
    DOUBLE  shift, and go to state 9
    STRING  shift, and go to state 10
    CONST   shift, and go to state 11

    $default  reduce using rule 3 (program)

    funct_def    go to state 37
    funct_decl   go to state 38
    var_decl     go to state 39
    const_decl   go to state 40
    scalar_type  go to state 16


State 26

   14 funct_def: scalar_type ID L_PAREN . R_PAREN compound_statement $@3
   16          | scalar_type ID L_PAREN . parameter_list R_PAREN compound_statement $@4
   25 funct_decl: scalar_type ID L_PAREN . R_PAREN SEMICOLON
   26           | scalar_type ID L_PAREN . parameter_list R_PAREN SEMICOLON

    INT      shift, and go to state 5
    BOOL     shift, and go to state 6
    FLOAT    shift, and go to state 8
    DOUBLE   shift, and go to state 9
    STRING   shift, and go to state 10
    R_PAREN  shift, and go to state 41

    parameter_list  go to state 42
    scalar_type     go to state 34


State 27

   40 identifier_list: ID ASSIGN_OP . Logical_expression

    ID           shift, and go to state 43
    INT_CONST    shift, and go to state 44
    FLOAT_CONST  shift, and go to state 45
    SCIENTIFIC   shift, and go to state 46
    STR_CONST    shift, and go to state 47
    TRUE         shift, and go to state 48
    FALSE        shift, and go to state 49
    L_PAREN      shift, and go to state 50
    SUB_OP       shift, and go to state 51
    NOT_OP       shift, and go to state 52

    variable_reference     go to state 53
    Logical_expression     go to state 54
    logical_expression     go to state 55
    logical_term           go to state 56
    logical_factor         go to state 57
    relation_expression    go to state 58
    arithmetic_expression  go to state 59
    term                   go to state 60
    factor                 go to state 61
    element                go to state 62
    array_list             go to state 63
    sign_literal_const     go to state 64
    literal_const          go to state 65


State 28

   52 array_decl: ID $@13 . dim

    ML_BRACE  shift, and go to state 66

    dim  go to state 67


State 29

   34 identifier_list: identifier_list COMMA . ID
   35                | identifier_list COMMA . ID ASSIGN_OP Logical_expression
   36                | identifier_list COMMA . array_decl ASSIGN_OP initial_array
   37                | identifier_list COMMA . array_decl

    ID  shift, and go to state 68

    array_decl  go to state 69


State 30

   33 var_decl: scalar_type identifier_list SEMICOLON .

    $default  reduce using rule 33 (var_decl)


State 31

   38 identifier_list: array_decl ASSIGN_OP . initial_array

    $default  reduce using rule 42 ($@11)

    initial_array  go to state 70
    $@11           go to state 71


State 32

   20 funct_def: VOID ID L_PAREN R_PAREN . $@5 compound_statement $@6 $@7
   27 funct_decl: VOID ID L_PAREN R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 72

    $default  reduce using rule 17 ($@5)

    $@5  go to state 73


State 33

   24 funct_def: VOID ID L_PAREN parameter_list . R_PAREN $@8 compound_statement $@9 $@10
   28 funct_decl: VOID ID L_PAREN parameter_list . R_PAREN SEMICOLON
   29 parameter_list: parameter_list . COMMA scalar_type ID
   30               | parameter_list . COMMA scalar_type array_decl

    R_PAREN  shift, and go to state 74
    COMMA    shift, and go to state 75


State 34

   31 parameter_list: scalar_type . array_decl
   32               | scalar_type . ID

    ID  shift, and go to state 76

    array_decl  go to state 77


State 35

   50 const_list: ID . ASSIGN_OP sign_literal_const

    ASSIGN_OP  shift, and go to state 78


State 36

   48 const_decl: CONST $@12 scalar_type const_list . SEMICOLON
   49 const_list: const_list . COMMA ID ASSIGN_OP sign_literal_const

    COMMA      shift, and go to state 79
    SEMICOLON  shift, and go to state 80


State 37

   11 decl_and_def_list: decl_and_def_list funct_def .

    $default  reduce using rule 11 (decl_and_def_list)


State 38

   10 decl_and_def_list: decl_and_def_list funct_decl .

    $default  reduce using rule 10 (decl_and_def_list)


State 39

    8 decl_and_def_list: decl_and_def_list var_decl .

    $default  reduce using rule 8 (decl_and_def_list)


State 40

    9 decl_and_def_list: decl_and_def_list const_decl .

    $default  reduce using rule 9 (decl_and_def_list)


State 41

   14 funct_def: scalar_type ID L_PAREN R_PAREN . compound_statement $@3
   25 funct_decl: scalar_type ID L_PAREN R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 81
    L_BRACE    shift, and go to state 82

    compound_statement  go to state 83


State 42

   16 funct_def: scalar_type ID L_PAREN parameter_list . R_PAREN compound_statement $@4
   26 funct_decl: scalar_type ID L_PAREN parameter_list . R_PAREN SEMICOLON
   29 parameter_list: parameter_list . COMMA scalar_type ID
   30               | parameter_list . COMMA scalar_type array_decl

    R_PAREN  shift, and go to state 84
    COMMA    shift, and go to state 75


State 43

  133 variable_reference: ID .
  171 element: ID . L_PAREN logical_expression_list R_PAREN
  172        | ID . L_PAREN R_PAREN
  176 array_list: ID . $@57 dimension

    L_PAREN  shift, and go to state 85

    ML_BRACE  reduce using rule 175 ($@57)
    $default  reduce using rule 133 (variable_reference)

    $@57  go to state 86


State 44

  186 literal_const: INT_CONST .

    $default  reduce using rule 186 (literal_const)


State 45

  187 literal_const: FLOAT_CONST .

    $default  reduce using rule 187 (literal_const)


State 46

  188 literal_const: SCIENTIFIC .

    $default  reduce using rule 188 (literal_const)


State 47

  189 literal_const: STR_CONST .

    $default  reduce using rule 189 (literal_const)


State 48

  190 literal_const: TRUE .

    $default  reduce using rule 190 (literal_const)


State 49

  191 literal_const: FALSE .

    $default  reduce using rule 191 (literal_const)


State 50

  170 element: L_PAREN . $@56 logical_expression R_PAREN

    $default  reduce using rule 169 ($@56)

    $@56  go to state 87


State 51

  167 element: SUB_OP . $@55 element
  184 sign_literal_const: SUB_OP . sign_literal_const

    INT_CONST    shift, and go to state 44
    FLOAT_CONST  shift, and go to state 45
    SCIENTIFIC   shift, and go to state 46
    STR_CONST    shift, and go to state 47
    TRUE         shift, and go to state 48
    FALSE        shift, and go to state 49
    SUB_OP       shift, and go to state 88

    SUB_OP    [reduce using rule 166 ($@55)]
    $default  reduce using rule 166 ($@55)

    $@55                go to state 89
    sign_literal_const  go to state 90
    literal_const       go to state 65


State 52

  142 logical_factor: NOT_OP . $@49 logical_factor

    $default  reduce using rule 141 ($@49)

    $@49  go to state 91


State 53

  168 element: variable_reference .

    $default  reduce using rule 168 (element)


State 54

   40 identifier_list: ID ASSIGN_OP Logical_expression .

    $default  reduce using rule 40 (identifier_list)


State 55

  134 Logical_expression: logical_expression .
  136 logical_expression: logical_expression . OR_OP $@47 logical_term

    OR_OP  shift, and go to state 92

    $default  reduce using rule 134 (Logical_expression)


State 56

  137 logical_expression: logical_term .
  139 logical_term: logical_term . AND_OP $@48 logical_factor

    AND_OP  shift, and go to state 93

    $default  reduce using rule 137 (logical_expression)


State 57

  140 logical_term: logical_factor .

    $default  reduce using rule 140 (logical_term)


State 58

  143 logical_factor: relation_expression .
  144 relation_expression: relation_expression . relation_operator arithmetic_expression

    LE_OP  shift, and go to state 94
    NE_OP  shift, and go to state 95
    GE_OP  shift, and go to state 96
    EQ_OP  shift, and go to state 97
    LT_OP  shift, and go to state 98
    GT_OP  shift, and go to state 99

    $default  reduce using rule 143 (logical_factor)

    relation_operator  go to state 100


State 59

  145 relation_expression: arithmetic_expression .
  153 arithmetic_expression: arithmetic_expression . ADD_OP $@50 term
  155                      | arithmetic_expression . SUB_OP $@51 term

    ADD_OP  shift, and go to state 101
    SUB_OP  shift, and go to state 102

    $default  reduce using rule 145 (relation_expression)


State 60

  156 arithmetic_expression: term .
  158 term: term . MUL_OP $@52 factor
  160     | term . DIV_OP $@53 factor
  162     | term . MOD_OP $@54 factor

    MUL_OP  shift, and go to state 103
    DIV_OP  shift, and go to state 104
    MOD_OP  shift, and go to state 105

    $default  reduce using rule 156 (arithmetic_expression)


State 61

  163 term: factor .

    $default  reduce using rule 163 (term)


State 62

  165 factor: element .

    $default  reduce using rule 165 (factor)


State 63

  132 variable_reference: array_list .

    $default  reduce using rule 132 (variable_reference)


State 64

  164 factor: sign_literal_const .

    $default  reduce using rule 164 (factor)


State 65

  185 sign_literal_const: literal_const .

    $default  reduce using rule 185 (sign_literal_const)


State 66

   54 dim: ML_BRACE . INT_CONST MR_BRACE

    INT_CONST  shift, and go to state 106


State 67

   52 array_decl: ID $@13 dim .
   53 dim: dim . ML_BRACE INT_CONST MR_BRACE

    ML_BRACE  shift, and go to state 107

    $default  reduce using rule 52 (array_decl)


State 68

   34 identifier_list: identifier_list COMMA ID .
   35                | identifier_list COMMA ID . ASSIGN_OP Logical_expression
   52 array_decl: ID . $@13 dim

    ASSIGN_OP  shift, and go to state 108

    ML_BRACE  reduce using rule 51 ($@13)
    $default  reduce using rule 34 (identifier_list)

    $@13  go to state 28


State 69

   36 identifier_list: identifier_list COMMA array_decl . ASSIGN_OP initial_array
   37                | identifier_list COMMA array_decl .

    ASSIGN_OP  shift, and go to state 109

    $default  reduce using rule 37 (identifier_list)


State 70

   38 identifier_list: array_decl ASSIGN_OP initial_array .

    $default  reduce using rule 38 (identifier_list)


State 71

   43 initial_array: $@11 . L_BRACE literal_list R_BRACE

    L_BRACE  shift, and go to state 110


State 72

   27 funct_decl: VOID ID L_PAREN R_PAREN SEMICOLON .

    $default  reduce using rule 27 (funct_decl)


State 73

   20 funct_def: VOID ID L_PAREN R_PAREN $@5 . compound_statement $@6 $@7

    L_BRACE  shift, and go to state 82

    compound_statement  go to state 111


State 74

   24 funct_def: VOID ID L_PAREN parameter_list R_PAREN . $@8 compound_statement $@9 $@10
   28 funct_decl: VOID ID L_PAREN parameter_list R_PAREN . SEMICOLON

    SEMICOLON  shift, and go to state 112

    $default  reduce using rule 21 ($@8)

    $@8  go to state 113


State 75

   29 parameter_list: parameter_list COMMA . scalar_type ID
   30               | parameter_list COMMA . scalar_type array_decl
